--- a/HW-4.Rmd
+++ b/HW-4.Rmd
@@ -1,11 +1,14 @@
 ---
 title: "MATH 216 Homework 4"
-author: "WRITE YOUR NAME HERE"
+author: "Joy Wood"
 output: html_document
 ---
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 # For data manipulation and visualization
+#install.packages("mosaic")
+suppressPackageStartupMessages(library(mosaic))
+suppressPackageStartupMessages(library(stringr))
 suppressPackageStartupMessages(library(dplyr))
 suppressPackageStartupMessages(library(ggplot2))
 suppressPackageStartupMessages(library(tidyr))
@@ -23,80 +26,84 @@ suppressPackageStartupMessages(library(leaflet))
 
 Please indicate
 
-* Who you collaborated with:
-* Roughly how much time you spent on this HW:
+* Who you collaborated with: talked to Christian about data and leaflet
+* Roughly how much time you spent on this HW: ~6 hours
 * What gave you the most trouble:
 * Any comments you have: 
 
 
-
-
-
 ## Question 1:
 
-```{r, cache=TRUE, echo=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 # Load state and county map of US in 2010 from the maps package and convert them
 # to data frames so that we can ggplot them.
 US_state <- map_data("state") %>% 
   tbl_df()
 US_county <- map_data("county") %>% 
   tbl_df()
+county_data <- read.csv("data/COUNTY.csv", header=TRUE) %>% 
+  tbl_df()
 ```
 
 ### Choropleth Map of US Voter Behavior in 2000
-
-Download the results of the 2000 election from the [School of Public Affairs at 
-American University in DC](http://www.american.edu/spa/ccps/Data-Sets.cfm) and 
-create a map involving only the lower 48 states that show voter behavior at a 
-**county** level. To keep things simple let's only consider George W. Bush, Al
-Gore, and Ralph Nader. Your write-up must include:
-
-1. A [choropleth map](https://en.wikipedia.org/wiki/Choropleth_map) where
-    * Counties are filled with red when they tend to favor Bush
-    * Counties are filled with white when they tend to be split
-    * Counties are filled with blue when they tend to favor Gore and Nader
-2. An answer to the following question: which states exhibit the greatest
-**within state heterogeneity** in voting? Come up with a mathematical
-justification.
-
-
-### Hints
-
-* Consider `scale_fill_gradient2(name="", low="blue", high="red", mid="white")` 
-for the appropriate "mid" point.  See the ggplot2 webpage for [this
-command](http://docs.ggplot2.org/0.9.3.1/scale_gradient2.html) for inspiration.
-* I believe the county map is from 2010, whereas the election data is from 2000,
-as such certain counties will not match up. The number is not that large.
-* [Counties in
-Virginia](http://en.wikipedia.org/wiki/List_of_counties_in_Virginia)
-
-
-### Code Hints
-
-This function eliminates all non-alphanumeric characters and spaces and converts
-all text to lower case:
-
-```{r}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 clean_text <- function(text){
   text <- gsub("[^[:alnum:]]", "", text)
   text <- gsub(" ", "", text)
-  text <- tolower(text)
+  text <- tolower(str_trim(text))
   return(text)
 }
-clean_text("HeLLO wOrLd.")
-```
+#factor to num
+county_data$PNADER <- as.numeric(as.character(county_data$PNADER ))
+county_data$PGORE <- as.numeric(as.character(county_data$PGORE ))
+county_data$PBUSH <- as.numeric(as.character(county_data$PBUSH))
 
-For the following `ggplot`, see how I didn't define `data` nor any `aes`thetics
-in the base `ggplot`, but only within the respective `geom`'s. This is a nice
-trick that allows you to have different `data` and different `aes` apply to
-different `geom`'s; in this case state-level vs county-level data.
+#replace na with 0
+county_data$PNADER[is.na(county_data$PNADER)] <- 0
+county_data$PBUSH[is.na(county_data$PBUSH)] <- 0
+county_data$PGORE[is.na(county_data$PGORE)] <- 0
 
-```{r}
-ggplot(data=NULL) +
-  geom_polygon(data=US_county, aes(x=long, y=lat, group=group, fill=1)) +
-  geom_path(data=US_county, aes(x=long, y=lat, group=group), col="black", size=0.05) +
-  geom_path(data=US_state, aes(x=long, y=lat, group=group), col="black", size=0.1) +
-  coord_map()
+#clean text
+US_county$region <- clean_text(US_county$region)
+US_county$subregion <- clean_text(US_county$subregion)
+county_data$STATE <- clean_text(county_data$STATE)
+county_data$COUNTY <- clean_text(county_data$COUNTY)
+county_data$STATE <- clean_text(county_data$STATE)
+county_data$COUNTY <- clean_text(county_data$COUNTY)
+
+#aggregate democrats
+county_data$PNADER_PGORE <- county_data$PGORE + county_data$PNADER
+
+#categorical party var
+county_geo_data<- left_join(US_county, county_data, by = c( "region" = "STATE", "subregion" = "COUNTY")) %>% 
+  na.omit() %>% 
+  mutate(party = derivedFactor(
+    "D" = (PNADER_PGORE-PBUSH > .03),
+    "R" = (PBUSH-PNADER_PGORE > .1),
+    .method = "first",
+    .default = "S"
+    )) %>% 
+  select(-PNADER, -PGORE)
+
+#color scheme
+myColors <- c("#1B338B","#8B1B33","#FFFFFF")
+names(myColors) <- levels(county_geo_data$party)
+colScale <- scale_fill_manual(name = "party",values = myColors, labels=c("Democrat", "Republican", "Split"))
+
+#base map
+g <- ggplot(data=NULL) +
+geom_polygon(data=county_geo_data, aes(x=long, y=lat, group=group, fill=party)) +
+geom_path(data=county_geo_data, aes(x=long, y=lat, group=group), col="grey", size=0.1) +
+geom_path(data=US_state, aes(x=long, y=lat, group=group), col="black", size=0.2) +
+coord_map() +
+guides(fill=guide_legend(title=NULL))+
+labs(title = "Prefered Party By County in the 2000 Election", x = "longitude", y = "latitude")+
+  theme_map()+
+  theme(legend.background = element_rect(fill="gray90", size=.5))
+
+#add color
+g+colScale
+
 ```
 
 
@@ -104,52 +111,88 @@ ggplot(data=NULL) +
 
 ```{r, fig.width=12, fig.height=6}
 
+#Spatial Autocorrelation: Moran's I
+county_geo_data
+# Run the next bit of code a few times to convince yourselves of this fact.
+county_geo_data.dists <- as.matrix(dist(cbind(county_geo_data$lon, county_geo_data$lat)))
+
+ozone.dists.inv <- 1/ozone.dists
+diag(ozone.dists.inv) <- 0
+# We then compute Moran's I using Y_i = noise.  Look at the statistic and 
+# p-value for multiple runs of the following two lines. Again, run this a few 
+# times to see how the p-value behaves.
+noise <- runif(n, min=0, max=1)
+moran.test(noise, PDX_weights)
+
+
 ```
-
-
-
 
 
 
 ## Question 2:
 
-In this question, you must make an interactive "Single File" Shiny app that uses
-Leaflet. For all 184 census tracts in VT in the 2010 census, present
-information on the proportion of the population that is either
-
-* White
-* African-American
-* Hispanic
-* Asian and Pacific Island
-* Other, including those of two or more races
-
-Use [Social Explorer](http://www.socialexplorer.com/) to get census data. I did
-a demo of this in class. If you don't remember how or are stuck, please speak to
-me or get help from your peers. Do not submit copies of the same file.
-
-There should be some mechanism in your Shiny app that allows one the user to toggle
-between the different ethnic groups.
-
-
 ### Loading Shapefile Data
 
 Here is some starter code:
 
-```{r}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
+#I'm not sure why these don't/rarely knit, they compile fine for me
+
 shapefile_name <- paste(getwd(), "/VT_census_tracts/tl_2015_50_tract.shp", sep="")
 VT <- readOGR(shapefile_name, layer = "tl_2015_50_tract", verbose = FALSE)
-leaflet(VT) %>%
-  addTiles() %>% 
-  addPolylines(color="black", weight=1)
+
+#import, select, rename 
+vt_census <- read.csv("data/VT_census_tract.csv", header=TRUE) %>% 
+  tbl_df()
+
+vt_census <- select(vt_census,  GEOID = Geo_FIPS, total_pop = SE_T055_001, white = SE_T055_003, black = SE_T055_004, hispanic = SE_T055_010, native = SE_T055_005, asian = SE_T055_006, islander = SE_T055_007, other = SE_T055_008, mix = SE_T055_009)
+
+
+#calc proportions
+vt_census <- vt_census %>% mutate(
+  prop_white = white/total_pop,
+  prop_black = black/total_pop,
+  prop_hispanic = hispanic/total_pop,
+  prop_native = native/total_pop, 
+  prop_asian = asian/total_pop, 
+  prop_islander = islander/total_pop, 
+  prop_other = other/total_pop,
+  prop_mix = mix/total_pop)
+
+
+base <- leaflet(VT) %>%
+  addProviderTiles("CartoDB.Positron") %>%
+  addPolylines(data = VT, color="#FFFFFF", weight=2)
+
+#hispanic
+pal <- colorQuantile("YlOrRd", NULL, n = 5)
+base %>% addPolygons(
+              fillColor = ~pal(1 - vt_census$prop_hispanic),#inverts color scheme
+              fillOpacity = 0.5, 
+              weight = 1)
+#white
+pal <- colorQuantile("YlGnBu", NULL, n = 5)
+base %>% addPolygons(
+              fillColor = ~pal(1 - vt_census$prop_white),#inverts color scheme
+              fillOpacity = 0.5, 
+              weight = 1)
+#black
+pal <- colorQuantile("RdPu", NULL, n = 5)
+base %>% addPolygons(
+              fillColor = ~pal(1 - vt_census$prop_black),#inverts color scheme
+              fillOpacity = 0.5, 
+              weight = 1)
+#asian
+pal <- colorQuantile("Oranges", NULL, n = 5)
+base %>% addPolygons(
+              fillColor = ~pal(1 - vt_census$prop_black),#inverts color scheme
+              fillOpacity = 0.5, 
+              weight = 1)
+
 ```
 
 
 ### Write-Up
-
-Upload your shiny app to the Middlebury Shiny Server (see Lecture 16) and post
-the url to the app [here](https://www.nhl.com/), replacing the nhl.com link with 
-the link to your app.
-
 Comment on general ethnic demographic trends that's more substantive than just
 "Vermont is really white."
 
